# haskell

./: .gitmodules
sat/: LICENSE.md  sat.cabal
sat/src/Solver/Sat/: CaDiCaL.hs
ulf/: main.hs  quantities.txt  ulf.cabal
ulf/examples/: benchmarks.fcif  const.fcif
ulf/src/Common/: Icit.hs  Names.hs  Qty.hs  Unique.hs
ulf/src/Elaborate/: Check.hs  Error.hs  Error.hs-boot  Evaluation.hs  Occurrence.hs  Term.hs  Unification.hs  Value.hs  Zonk.hs
ulf/src/Source/: Parser.hs  Term.hs
